; ModuleID = '/home/carl/AnghaBench/radare2/shlr/mpc/extr_mpc.c_mpc_anchor.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/mpc/extr_mpc.c_mpc_anchor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__, i32 }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 (i8, i8)* }

@MPC_TYPE_ANCHOR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"anchor\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_10__* @mpc_anchor(i32 (i8, i8)* %0) #0 {
  %2 = alloca i32 (i8, i8)*, align 8
  %3 = alloca %struct.TYPE_10__*, align 8
  store i32 (i8, i8)* %0, i32 (i8, i8)** %2, align 8
  %4 = call %struct.TYPE_10__* (...) @mpc_undefined()
  store %struct.TYPE_10__* %4, %struct.TYPE_10__** %3, align 8
  %5 = load i32, i32* @MPC_TYPE_ANCHOR, align 4
  %6 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 8
  %8 = load i32 (i8, i8)*, i32 (i8, i8)** %2, align 8
  %9 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 0
  store i32 (i8, i8)* %8, i32 (i8, i8)** %12, align 8
  %13 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %14 = call %struct.TYPE_10__* @mpc_expect(%struct.TYPE_10__* %13, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  ret %struct.TYPE_10__* %14
}

declare dso_local %struct.TYPE_10__* @mpc_undefined(...) #1

declare dso_local %struct.TYPE_10__* @mpc_expect(%struct.TYPE_10__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
